// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should display error message when no issues available 1`] = `
<Modal
  contentLabel="modal"
  onRequestClose={[Function]}
  size="small"
>
  <form
    id="bulk-change-form"
    onSubmit={[Function]}
  >
    <div
      className="modal-head"
    >
      <h2>
        issue_bulk_change.form.title.0
      </h2>
    </div>
    <div
      className="modal-body modal-container"
    >
      <Alert
        variant="warning"
      >
        issue_bulk_change.no_match
      </Alert>
    </div>
    <div
      className="modal-foot"
    >
      <SubmitButton
        disabled={true}
        id="bulk-change-submit"
      >
        apply
      </SubmitButton>
      <ResetButtonLink
        onClick={[Function]}
      >
        cancel
      </ResetButtonLink>
    </div>
  </form>
</Modal>
`;

exports[`should display form when issues are present 1`] = `
<Modal
  contentLabel="modal"
  onRequestClose={[Function]}
  size="small"
>
  <form
    id="bulk-change-form"
    onSubmit={[Function]}
  >
    <div
      className="modal-head"
    >
      <h2>
        issue_bulk_change.form.title.1
      </h2>
    </div>
    <div
      className="modal-body modal-container"
    >
      <Checkbox
        checked={false}
        className="display-inline-block spacer-top"
        id="send-notifications"
        onCheck={[Function]}
        right={true}
        thirdState={false}
      >
        <strong
          className="little-spacer-right"
        >
          issue.send_notifications
        </strong>
      </Checkbox>
    </div>
    <div
      className="modal-foot"
    >
      <SubmitButton
        disabled={false}
        id="bulk-change-submit"
      >
        apply
      </SubmitButton>
      <ResetButtonLink
        onClick={[Function]}
      >
        cancel
      </ResetButtonLink>
    </div>
  </form>
</Modal>
`;

exports[`should display warning when too many issues are passed 1`] = `
<h2>
  issue_bulk_change.form.title.1
</h2>
`;

exports[`should display warning when too many issues are passed 2`] = `
<Alert
  variant="warning"
>
  <FormattedMessage
    defaultMessage="issue_bulk_change.max_issues_reached"
    id="issue_bulk_change.max_issues_reached"
    values={
      Object {
        "max": <strong>
          1
        </strong>,
      }
    }
  />
</Alert>
`;
